objects/ASI_CRM_Call_Log_Suggestion_Setting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Key__c</fullName>
        <formula>If(ISPICKVAL(ASI_CRM_Type__c,&apos;WS&apos;),&apos;WS|&apos;+TEXT(ASI_CRM_WS_Tier__c),
   IF(ISPICKVAL(ASI_CRM_Type__c,&apos;Outlet&apos;),&apos;Outlet|&apos; + IF(ASI_CRM_New_Channel__c != NULL, ASI_CRM_New_Channel__c, ASI_CRM_Sub_Channel__c) + &apos;|&apos; + 
      IF(ASI_CRM_New_Channel__c != NULL, IF(ISPICKVAL(ASI_CRM_New_Channel__r.ASI_CRM_CN_On_Off__c,&apos;On&apos;), TEXT(ASI_CRM_Grade__c),
         IF(ISPICKVAL(ASI_CRM_New_Channel__r.ASI_CRM_CN_On_Off__c,&apos;Off&apos;), TEXT(ASI_CRM_New_Image__c),&apos;&apos;)), IF(ISPICKVAL(ASI_CRM_Sub_Channel__r.ASI_CRM_CN_Channel__r.ASI_CRM_CN_On_Off__c,&apos;On&apos;), TEXT(ASI_CRM_Grade__c),
			IF(ISPICKVAL(ASI_CRM_Sub_Channel__r.ASI_CRM_CN_Channel__r.ASI_CRM_CN_On_Off__c,&apos;Off&apos;), TEXT(ASI_CRM_Image__c),&apos;&apos;))),&apos;&apos;))</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image__c</fullName>
        <label>Image</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>CN New Channel</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.ASI_CRM_For_Outlet__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Call Log Suggestion Settings</relationshipLabel>
        <relationshipName>ASI_CRM_CLSSlookNC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Image__c</fullName>
        <label>New Image</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Call Log Suggestion Setting</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_Channel__c.ASI_CRM_CN_Not_in_use__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Call Log Suggestion Settings</relationshipLabel>
        <relationshipName>Call_Log_Suggestion_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SuggestedNoofVisitCompetitor__c</fullName>
        <label>Suggested No.of Visit (Competitor)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Suggested_No_of_Visit__c</fullName>
        <label>Suggested No. of Visit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outlet</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Tier__c</fullName>
        <label>WS Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Log Suggestion Setting</label>
    <listViews>
        <fullName>ASI_CRM_CN_Call_Log_Suggestion_Settings</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_WS_Tier__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Grade__c</columns>
        <columns>ASI_CRM_Image__c</columns>
        <columns>ASI_CRM_Suggested_No_of_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Key__c</columns>
        <columns>ASI_CRM_New_Channel__c</columns>
        <columns>ASI_CRM_New_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Call_Log_Suggestion_Setting__c.ASI_CRM_CN_Call_Log_Suggestion_Setting</value>
        </filters>
        <label>CN Call Log Suggestion Settings</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CLSS-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Log Suggestion Settings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Call_Log_Suggestion_Setting</fullName>
        <active>true</active>
        <label>CN Call Log Suggestion Setting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>